[tool.poetry]
name = "rpki-rtr-async"
version = "0.0.1"
description = ""
authors = ["Ties de Kock <ties@tiesdekock.nl>"]
license = "LGPL"
readme = "README.md"
packages = [{include = "rpki_rtr_async"}]

[tool.poetry.dependencies]
python = "^3.11"
pytricia = "^1.0.2"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
pre-commit = "^3.1.0"
black = "^22.12.0"
flake8 = "^6.0.0"
pylint = "^2.15.10"
flake8-typing-imports = "^1.14.0"
autoflake = "^2.0.0"

[tool.isort]
profile = "black"

[tool.autoflake]
check = true
imports = ["aiohttp", "altair", "netaddr", "pandas", "pytricia", "requests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
